Lab2 in progress fix

--- a/Selective_classification.ipynb
+++ b/Selective_classification.ipynb
@@ -390,7 +390,9 @@
      "text": [
       "1407/1407 [==============================] - 50s 35ms/step - loss: 1.2083 - accuracy: 0.5882 - val_loss: 1.6523 - val_accuracy: 0.4652 - lr: 0.1000\n",
       "Epoch 53/100\n",
-      " 373/1407 [======>.......................] - ETA: 35s - loss: 1.1882 - accuracy: 0.5932"
+      "1407/1407 [==============================] - 50s 35ms/step - loss: 1.1951 - accuracy: 0.5896 - val_loss: 1.3329 - val_accuracy: 0.5570 - lr: 0.1000\n",
+      "Epoch 54/100\n",
+      " 207/1407 [===>..........................] - ETA: 40s - loss: 1.1721 - accuracy: 0.6010"
      ]
     }
    ],
