--- a/DL_confidence.ipynb
+++ b/DL_confidence.ipynb
@@ -1345,7 +1345,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1359,7 +1359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
