--- a/WSIs.ipynb
+++ b/WSIs.ipynb
@@ -57,7 +57,7 @@
     "import pandas as pd\n",
     "from glob import glob\n",
     "import tensorflow as tf\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = '0'\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = '1'\n",
     "os.environ[\"TF_FORCE_GPU_ALLOW_GROWTH\"] = 'true'\n",
     "import matplotlib.pyplot as plt\n",
     "import openslide.deepzoom as dz\n",
@@ -68,17 +68,17 @@
     "from resnet import ResNet\n",
     "from dataset_wsi import DatasetWSI\n",
     "# ----------------------\n",
-    "tile_size = 500\n",
+    "tile_size = 300\n",
     "overlap = 6\n",
     "epochs = 100\n",
-    "learning_rate = 0.1\n",
+    "learning_rate = 0.001\n",
     "batch_size = 64\n",
     "class_dict = {\n",
     "    \"AC\": 0,\n",
     "    \"H\": 1,\n",
     "    \"AD\": 2\n",
     "}\n",
-    "checkpoint_filepath = './models_crc/checkpoint_crc_3_cls'                                                                                                                                                             \n",
+    "checkpoint_filepath = './models_crc/checkpoint_crc_3_cls_224'                                                                                                                                                             \n",
     "# ----------------------\n",
     "num_classes = len(class_dict.keys())\n",
     "wsi_file_paths = glob(os.path.join(rootdir_wsi, '*.svs'))\n",
@@ -88,13 +88,15 @@
     "                                                                                                           \"Dysplasia\",\n",
     "                                                                                                           \"#-Annotation\"])\n",
     "df['Path'] = wsi_file_paths\n",
-    "splitter = model_selection.GroupShuffleSplit(test_size=.2, n_splits=1, random_state=7)\n",
+    "splitter = model_selection.GroupShuffleSplit(test_size=.35, n_splits=1, random_state=7)\n",
     "split = splitter.split(df, groups=df['Patient'])\n",
     "train_inds, test_inds = next(split)\n",
-    "wsi_file_paths_test = df['Path'].iloc[test_inds]\n",
-    "wsi_labels_test = df['Type'].iloc[test_inds]\n",
-    "wsi_file_paths_train = df['Path'].iloc[train_inds]\n",
-    "wsi_labels_train = df['Type'].iloc[train_inds]"
+    "df_train = df.iloc[train_inds]\n",
+    "df_test = df.iloc[test_inds]\n",
+    "wsi_file_paths_test = df_test['Path']\n",
+    "wsi_labels_test = df_test['Type']\n",
+    "wsi_file_paths_train = df_train['Path']\n",
+    "wsi_labels_train = df_train['Type']"
    ]
   },
   {
@@ -157,17 +159,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "augmentation_block = [\n",
-    "    tf.keras.layers.RandomCrop(int(tile_size-tile_size*0.1), \n",
-    "                               int(tile_size-tile_size*0.1)),\n",
-    "    tf.keras.layers.Resizing(112, 112),\n",
-    "    tf.keras.layers.RandomContrast(0.1),\n",
-    "    tf.keras.layers.RandomFlip(\"horizontal_and_vertical\"),\n",
-    "    tf.keras.layers.RandomZoom(\n",
-    "        height_factor=(-0.05, -0.15),\n",
-    "        width_factor=(-0.05, -0.15)),\n",
-    "    tf.keras.layers.RandomRotation(0.3)\n",
-    "]"
+    "inv_class_dict = {v: k for k, v in class_dict.items()}\n",
+    "for batch_x, batch_y in dataset_test.take(5):\n",
+    "    fig, ax = plt.subplots(5, 5, figsize=(18, 18))\n",
+    "    ax = ax.ravel()\n",
+    "    j = 0\n",
+    "    for image, label in zip(batch_x[:25], batch_y[:25]):\n",
+    "        label = label.numpy()\n",
+    "        img = image.numpy()\n",
+    "        input_shape = img.shape\n",
+    "        ax[j].imshow(img)\n",
+    "        ax[j].axis('off')\n",
+    "        ax[j].set_title(\"Class: {}\".format(inv_class_dict[int(np.argmax(label))]))\n",
+    "        j += 1"
    ]
   },
   {
@@ -176,7 +180,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_model.layers"
+    "augmentation_block = [\n",
+    "    tf.keras.layers.RandomCrop(int(tile_size-tile_size*0.1), \n",
+    "                               int(tile_size-tile_size*0.1)),\n",
+    "    tf.keras.layers.Resizing(224, 224),\n",
+    "    tf.keras.layers.RandomContrast(0.1),\n",
+    "    tf.keras.layers.RandomFlip(\"horizontal_and_vertical\"),\n",
+    "    tf.keras.layers.RandomZoom(\n",
+    "        height_factor=(-0.05, -0.15),\n",
+    "        width_factor=(-0.05, -0.15)),\n",
+    "    tf.keras.layers.RandomRotation(0.3),\n",
+    "]"
    ]
   },
   {
@@ -268,7 +282,8 @@
    },
    "outputs": [],
    "source": [
-    "model.fit(dataset_train, epochs=epochs, callbacks=[checkpoint_callback, lr_callback, early_stop_callback])"
+    "model.fit(dataset_train, validation_data=dataset_test,\n",
+    "          epochs=epochs, callbacks=[checkpoint_callback, lr_callback, early_stop_callback])"
    ]
   },
   {
