--- a/WSIs.ipynb
+++ b/WSIs.ipynb
@@ -70,15 +70,15 @@
     "# ----------------------\n",
     "tile_size = 300\n",
     "overlap = 6\n",
-    "epochs = 100\n",
+    "epochs = 5\n",
     "learning_rate = 0.001\n",
     "batch_size = 64\n",
     "class_dict = {\n",
     "    \"AC\": 0,\n",
-    "    \"H\": 1,\n",
-    "    \"AD\": 2\n",
+    "    \"AD\": 1,\n",
+    "    \"H\": 2\n",
     "}\n",
-    "checkpoint_filepath = './models_crc/checkpoint_crc_3_cls_224'                                                                                                                                                             \n",
+    "checkpoint_filepath = './models_crc/checkpoint_crc_3_cls'                                                                                                                                                             \n",
     "# ----------------------\n",
     "num_classes = len(class_dict.keys())\n",
     "wsi_file_paths = glob(os.path.join(rootdir_wsi, '*.svs'))\n",
@@ -88,24 +88,8 @@
     "                                                                                                           \"Dysplasia\",\n",
     "                                                                                                           \"#-Annotation\"])\n",
     "df['Path'] = wsi_file_paths\n",
-    "splitter = model_selection.GroupShuffleSplit(test_size=.35, n_splits=1, random_state=7)\n",
-    "split = splitter.split(df, groups=df['Patient'])\n",
-    "train_inds, test_inds = next(split)\n",
-    "df_train = df.iloc[train_inds]\n",
-    "df_test = df.iloc[test_inds]\n",
-    "wsi_file_paths_test = df_test['Path']\n",
-    "wsi_labels_test = df_test['Type']\n",
-    "wsi_file_paths_train = df_train['Path']\n",
-    "wsi_labels_train = df_train['Type']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Common patients between train and test: {}\".format(len(set(df['Patient'].iloc[train_inds]).intersection(set(df['Patient'].iloc[test_inds])))))"
+    "wsi_file_paths = df['Path']\n",
+    "wsi_labels = df['Type']"
    ]
   },
   {
@@ -115,19 +99,14 @@
    "outputs": [],
    "source": [
     "print(\"Train\")\n",
-    "dataset_train = DatasetWSI(wsi_file_paths_train,\n",
-    "                           wsi_labels_train,\n",
+    "dataset_train = DatasetWSI(wsi_file_paths,\n",
+    "                           wsi_labels,\n",
     "                           class_dict,\n",
     "                           batch_size=batch_size,\n",
     "                           tile_size=tile_size,\n",
     "                           overlap=6).make_dataset()\n",
-    "print(\"Test\")\n",
-    "dataset_test = DatasetWSI(wsi_file_paths_test,\n",
-    "                          wsi_labels_test,\n",
-    "                          class_dict,\n",
-    "                          batch_size=batch_size,\n",
-    "                          tile_size=tile_size,\n",
-    "                          overlap=6).make_dataset()"
+    "for batch_x, batch_y in dataset_train.take(1):\n",
+    "    input_shape = batch_x[0].shape"
    ]
   },
   {
@@ -149,8 +128,9 @@
     "        input_shape = img.shape\n",
     "        ax[j].imshow(img)\n",
     "        ax[j].axis('off')\n",
-    "        ax[j].set_title(\"Class: {}\".format(inv_class_dict[int(np.argmax(label))]))\n",
-    "        j += 1"
+    "        ax[j].set_title(\"Class: {} - {}\".format(inv_class_dict[int(np.argmax(label))], label))\n",
+    "        j += 1\n",
+    "fig.savefig(\"images.pdf\")"
    ]
   },
   {
@@ -159,38 +139,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inv_class_dict = {v: k for k, v in class_dict.items()}\n",
-    "for batch_x, batch_y in dataset_test.take(5):\n",
-    "    fig, ax = plt.subplots(5, 5, figsize=(18, 18))\n",
-    "    ax = ax.ravel()\n",
-    "    j = 0\n",
-    "    for image, label in zip(batch_x[:25], batch_y[:25]):\n",
-    "        label = label.numpy()\n",
-    "        img = image.numpy()\n",
-    "        input_shape = img.shape\n",
-    "        ax[j].imshow(img)\n",
-    "        ax[j].axis('off')\n",
-    "        ax[j].set_title(\"Class: {}\".format(inv_class_dict[int(np.argmax(label))]))\n",
-    "        j += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "augmentation_block = [\n",
-    "    tf.keras.layers.RandomCrop(int(tile_size-tile_size*0.1), \n",
-    "                               int(tile_size-tile_size*0.1)),\n",
-    "    tf.keras.layers.Resizing(224, 224),\n",
-    "    tf.keras.layers.RandomContrast(0.1),\n",
-    "    tf.keras.layers.RandomFlip(\"horizontal_and_vertical\"),\n",
-    "    tf.keras.layers.RandomZoom(\n",
-    "        height_factor=(-0.05, -0.15),\n",
-    "        width_factor=(-0.05, -0.15)),\n",
-    "    tf.keras.layers.RandomRotation(0.3),\n",
-    "]"
+    "data_dir = \"./crc_images/train\"\n",
+    "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "    data_dir,\n",
+    "    validation_split=0.2,\n",
+    "    subset=\"training\",\n",
+    "    label_mode=\"categorical\",\n",
+    "    seed=123,\n",
+    "    image_size=(input_shape[0], input_shape[1]),\n",
+    "    batch_size=64)\n",
+    "\n",
+    "val_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "    data_dir,\n",
+    "    validation_split=0.2,\n",
+    "    subset=\"validation\",\n",
+    "    label_mode=\"categorical\",\n",
+    "    seed=123,\n",
+    "    image_size=(input_shape[0], input_shape[1]),\n",
+    "    batch_size=64)\n",
+    "\n",
+    "data_dir = \"./crc_images/test\"\n",
+    "test_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "    data_dir,\n",
+    "    label_mode=\"categorical\",\n",
+    "    seed=123,\n",
+    "    image_size=(input_shape[0], input_shape[1]),\n",
+    "    batch_size=64)"
    ]
   },
   {
@@ -201,13 +175,21 @@
    },
    "outputs": [],
    "source": [
+    "augmentation_block = [\n",
+    "    tf.keras.layers.RandomContrast(0.1),\n",
+    "    tf.keras.layers.RandomFlip(\"horizontal_and_vertical\"),\n",
+    "    tf.keras.layers.RandomZoom(\n",
+    "        height_factor=(-0.05, -0.15),\n",
+    "        width_factor=(-0.05, -0.15)),\n",
+    "    tf.keras.layers.RandomRotation(0.3),\n",
+    "]\n",
     "inputs = tf.keras.Input(input_shape)\n",
     "x =  tf.keras.applications.resnet50.preprocess_input(inputs)\n",
+    "x = tf.keras.layers.Resizing(64, 64)(x)\n",
     "for layer in augmentation_block:\n",
-    "    x = layer(x)\n",
+    "    x = layer(x, training=False)\n",
     "base_model = tf.keras.applications.ResNet50(include_top=False, weights=\"imagenet\")\n",
     "for j, layer in enumerate(base_model.layers[:100]):\n",
-    "    print(layer.name, j)\n",
     "    layer.trainable = False\n",
     "x = base_model(x, training=False)\n",
     "x = tf.keras.layers.GlobalAveragePooling2D()(x)\n",
@@ -282,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "model.fit(dataset_train, validation_data=dataset_test,\n",
+    "model.fit(train_ds, validation_data=train_ds,\n",
     "          epochs=epochs, callbacks=[checkpoint_callback, lr_callback, early_stop_callback])"
    ]
   },
@@ -292,7 +274,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = model.evaluate(dataset_test)"
+    "results = model.evaluate(test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Accuracy: {}\".format(results[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = model.evaluate(dataset_train)"
    ]
   },
   {
