--- a/WSIs.ipynb
+++ b/WSIs.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "aJMwibgmtReE"
    },
@@ -66,13 +66,16 @@
     "rootdir_src = \"/space/ponzio/teaching-MLinAPP/src/\"\n",
     "sys.path.append(rootdir_src)\n",
     "from resnet import ResNet\n",
-    "from dataset_wsi import DatasetWSI\n",
+    "from dataset_from_wsi import DatasetManager\n",
+    "from sklearn import model_selection\n",
     "# ----------------------\n",
-    "tile_size = 300\n",
-    "overlap = 6\n",
-    "epochs = 5\n",
+    "tile_size = 1000\n",
+    "tile_new_size = 224\n",
+    "overlap = 1\n",
+    "epochs = 1\n",
     "learning_rate = 0.001\n",
     "batch_size = 64\n",
+    "channels = 3\n",
     "class_dict = {\n",
     "    \"AC\": 0,\n",
     "    \"AD\": 1,\n",
@@ -80,6 +83,7 @@
     "}\n",
     "checkpoint_filepath = './models_crc/checkpoint_crc_3_cls'                                                                                                                                                             \n",
     "# ----------------------\n",
+    "input_shape = (tile_new_size, tile_new_size, channels)\n",
     "num_classes = len(class_dict.keys())\n",
     "wsi_file_paths = glob(os.path.join(rootdir_wsi, '*.svs'))\n",
     "df = pd.DataFrame([os.path.basename(slide).split('.')[0].split('_') for slide in wsi_file_paths], columns=[\"Patient\",\n",
@@ -88,52 +92,61 @@
     "                                                                                                           \"Dysplasia\",\n",
     "                                                                                                           \"#-Annotation\"])\n",
     "df['Path'] = wsi_file_paths\n",
-    "wsi_file_paths = df['Path']\n",
-    "wsi_labels = df['Type']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train\n",
-      "{'deepZoomObject': DeepZoomGenerator(OpenSlide('/space/ponzio/CRC_ROIs_4_classes/33_AD_T_Low_2.svs'), tile_size=300, overlap=6, limit_bounds=True), 'level': 13, 'coordinates': (0, 1), 'tile_coordinates': ((0, 588), 0, (612, 624)), 'filepath_slide': OpenSlide('/space/ponzio/CRC_ROIs_4_classes/33_AD_T_Low_2.svs'), 'label': 'AD'}\n",
-      "{'deepZoomObject': DeepZoomGenerator(OpenSlide('/space/ponzio/CRC_ROIs_4_classes/33_AD_T_Low_2.svs'), tile_size=300, overlap=6, limit_bounds=True), 'level': 13, 'coordinates': (0, 2), 'tile_coordinates': ((0, 1188), 0, (612, 624)), 'filepath_slide': OpenSlide('/space/ponzio/CRC_ROIs_4_classes/33_AD_T_Low_2.svs'), 'label': 'AD'}\n",
-      "{'deepZoomObject': DeepZoomGenerator(OpenSlide('/space/ponzio/CRC_ROIs_4_classes/33_AD_T_Low_2.svs'), tile_size=300, overlap=6, limit_bounds=True), 'level': 13, 'coordinates': (0, 3), 'tile_coordinates': ((0, 1788), 0, (612, 624)), 'filepath_slide': OpenSlide('/space/ponzio/CRC_ROIs_4_classes/33_AD_T_Low_2.svs'), 'label': 'AD'}\n",
-      "Stats:\n",
-      "147 slides\n",
-      "7856 tiles\n",
-      "3 classes\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Train\")\n",
-    "dataset_train = DatasetWSI(wsi_file_paths,\n",
-    "                           wsi_labels,\n",
-    "                           class_dict,\n",
-    "                           batch_size=batch_size,\n",
-    "                           tile_size=tile_size,\n",
-    "                           overlap=6).make_dataset()\n",
-    "for batch_x, batch_y in dataset_train.take(1):\n",
-    "    input_shape = batch_x[0].shape"
+    "splitter = model_selection.GroupShuffleSplit(test_size=.4, n_splits=1, random_state=7)\n",
+    "split = splitter.split(df, groups=df['Patient'])\n",
+    "train_inds, test_inds = next(split)\n",
+    "\n",
+    "train = df.iloc[train_inds]\n",
+    "test = df.iloc[test_inds]\n",
+    "wsi_file_paths_train = train['Path']\n",
+    "wsi_labels_categorical_train = train['Type']\n",
+    "wsi_labels_numerical_train = [class_dict[label] for label in wsi_labels_categorical_train]\n",
+    "wsi_file_paths_test = test['Path']\n",
+    "wsi_labels_categorical_test = test['Type']\n",
+    "wsi_labels_numerical_test = [class_dict[label] for label in wsi_labels_categorical_test]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "OWmrhB7dxdxM"
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Training\")\n",
+    "dataset_manager_train = DatasetManager(wsi_file_paths_train,\n",
+    "                                       wsi_labels_numerical_train,\n",
+    "                                       tile_size=tile_size,\n",
+    "                                       tile_new_size=tile_new_size,\n",
+    "                                       channels=channels,\n",
+    "                                       batch_size=batch_size)\n",
+    "dataset_train = dataset_manager_train.make_dataset()\n",
+    "print(\"Test\")\n",
+    "dataset_manager_test = DatasetManager(wsi_file_paths_test,\n",
+    "                                      wsi_labels_numerical_test,\n",
+    "                                      tile_size=tile_size,\n",
+    "                                      tile_new_size=tile_new_size,\n",
+    "                                      channels=channels,\n",
+    "                                      batch_size=batch_size)\n",
+    "dataset_test = dataset_manager_test.make_dataset(shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_placeholders_test = dataset_manager_test.get_tile_placeholders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "inv_class_dict = {v: k for k, v in class_dict.items()}\n",
-    "for batch_x, batch_y in dataset_train.take(2):\n",
+    "for batch_x, batch_y in dataset_train.take(1):\n",
     "    fig, ax = plt.subplots(5, 5, figsize=(18, 18))\n",
     "    ax = ax.ravel()\n",
     "    j = 0\n",
@@ -143,9 +156,9 @@
     "        input_shape = img.shape\n",
     "        ax[j].imshow(img)\n",
     "        ax[j].axis('off')\n",
-    "        ax[j].set_title(\"Class: {} - {}\".format(inv_class_dict[int(np.argmax(label))], label))\n",
+    "        ax[j].set_title(\"Class: {} - {}\\nshape:{}\".format(inv_class_dict[int(np.argmax(label))], label, image.shape))\n",
     "        j += 1\n",
-    "fig.savefig(\"images.pdf\")"
+    "fig.savefig(\"train_images.pdf\")"
    ]
   },
   {
@@ -154,32 +167,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"./crc_images/train\"\n",
-    "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
-    "    data_dir,\n",
-    "    validation_split=0.2,\n",
-    "    subset=\"training\",\n",
-    "    label_mode=\"categorical\",\n",
-    "    seed=123,\n",
-    "    image_size=(input_shape[0], input_shape[1]),\n",
-    "    batch_size=64)\n",
+    "inv_class_dict = {v: k for k, v in class_dict.items()}\n",
+    "for batch_x, batch_y in dataset_test.take(1):\n",
+    "    fig, ax = plt.subplots(5, 5, figsize=(18, 18))\n",
+    "    ax = ax.ravel()\n",
+    "    j = 0\n",
+    "    for image, label in zip(batch_x[:25], batch_y[:25]):\n",
+    "        label = label.numpy()\n",
+    "        img = image.numpy()\n",
+    "        input_shape = img.shape\n",
+    "        ax[j].imshow(img)\n",
+    "        ax[j].axis('off')\n",
+    "        ax[j].set_title(\"Class: {} - {}\\nshape:{}\".format(inv_class_dict[int(np.argmax(label))], label, image.shape))\n",
+    "        j += 1\n",
+    "fig.savefig(\"test_images.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_dir = \"./crc_images/train\"\n",
+    "# train_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "#     data_dir,\n",
+    "#     validation_split=0.2,\n",
+    "#     subset=\"training\",\n",
+    "#     label_mode=\"categorical\",\n",
+    "#     seed=123,\n",
+    "#     image_size=(input_shape[0], input_shape[1]),\n",
+    "#     batch_size=64)\n",
     "\n",
-    "val_ds = tf.keras.utils.image_dataset_from_directory(\n",
-    "    data_dir,\n",
-    "    validation_split=0.2,\n",
-    "    subset=\"validation\",\n",
-    "    label_mode=\"categorical\",\n",
-    "    seed=123,\n",
-    "    image_size=(input_shape[0], input_shape[1]),\n",
-    "    batch_size=64)\n",
+    "# val_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "#     data_dir,\n",
+    "#     validation_split=0.2,\n",
+    "#     subset=\"validation\",\n",
+    "#     label_mode=\"categorical\",\n",
+    "#     seed=123,\n",
+    "#     image_size=(input_shape[0], input_shape[1]),\n",
+    "#     batch_size=64)\n",
     "\n",
-    "data_dir = \"./crc_images/test\"\n",
-    "test_ds = tf.keras.utils.image_dataset_from_directory(\n",
-    "    data_dir,\n",
-    "    label_mode=\"categorical\",\n",
-    "    seed=123,\n",
-    "    image_size=(input_shape[0], input_shape[1]),\n",
-    "    batch_size=64)"
+    "# data_dir = \"./crc_images/test\"\n",
+    "# test_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "#     data_dir,\n",
+    "#     label_mode=\"categorical\",\n",
+    "#     seed=123,\n",
+    "#     image_size=(input_shape[0], input_shape[1]),\n",
+    "#     batch_size=64)"
    ]
   },
   {
@@ -279,8 +314,7 @@
    },
    "outputs": [],
    "source": [
-    "model.fit(train_ds, validation_data=train_ds,\n",
-    "          epochs=epochs, callbacks=[checkpoint_callback, lr_callback, early_stop_callback])"
+    "model.fit(dataset_train, epochs=epochs, callbacks=[checkpoint_callback, lr_callback, early_stop_callback])"
    ]
   },
   {
@@ -289,25 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = model.evaluate(test_ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Accuracy: {}\".format(results[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = model.evaluate(dataset_train)"
+    "results = model.evaluate(dataset_test)"
    ]
   },
   {
