--- a/WSIs.ipynb
+++ b/WSIs.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "aJMwibgmtReE"
    },
@@ -62,11 +62,11 @@
     "import matplotlib.pyplot as plt\n",
     "import openslide.deepzoom as dz\n",
     "from sklearn import model_selection\n",
-    "rootdir_wsi = \"/space/ponzio/CRC_ROIs_4_classes/\"\n",
+    "rootdir_wsi = \"/space/ponzio/CRC_WSIs/\"\n",
     "rootdir_src = \"/space/ponzio/teaching-MLinAPP/src/\"\n",
     "sys.path.append(rootdir_src)\n",
     "from resnet import ResNet\n",
-    "from dataset_from_wsi import DatasetManager\n",
+    "from wsi_utils import DatasetManager\n",
     "from sklearn import model_selection\n",
     "# ----------------------\n",
     "tile_size = 1000\n",
@@ -77,79 +77,48 @@
     "batch_size = 16\n",
     "channels = 3\n",
     "class_dict = {\n",
-    "    \"AC\": 0,\n",
-    "    \"AD\": 1,\n",
-    "    \"H\": 2\n",
+    "    \"H\": 0,\n",
+    "    \"NH\": 1\n",
     "}\n",
     "checkpoint_filepath = './models_crc/checkpoint_crc_3_cls'                                                                                                                                                             \n",
     "# ----------------------\n",
     "input_shape = (tile_new_size, tile_new_size, channels)\n",
     "num_classes = len(class_dict.keys())\n",
-    "wsi_file_paths = glob(os.path.join(rootdir_wsi, '*.svs'))\n",
-    "df = pd.DataFrame([os.path.basename(slide).split('.')[0].split('_') for slide in wsi_file_paths], columns=[\"Patient\",\n",
-    "                                                                                                           \"Type\",\n",
-    "                                                                                                           \"Sub-type\",\n",
-    "                                                                                                           \"Dysplasia\",\n",
-    "                                                                                                           \"#-Annotation\"])\n",
-    "df['Path'] = wsi_file_paths\n",
-    "splitter = model_selection.GroupShuffleSplit(test_size=.4, n_splits=1, random_state=7)\n",
-    "split = splitter.split(df, groups=df['Patient'])\n",
-    "train_inds, test_inds = next(split)\n",
-    "\n",
-    "train = df.iloc[train_inds]\n",
-    "test = df.iloc[test_inds]\n",
-    "wsi_file_paths_train = train['Path']\n",
-    "wsi_labels_categorical_train = train['Type']\n",
-    "wsi_labels_numerical_train = [class_dict[label] for label in wsi_labels_categorical_train]\n",
-    "wsi_file_paths_test = test['Path']\n",
-    "wsi_labels_categorical_test = test['Type']\n",
-    "wsi_labels_numerical_test = [class_dict[label] for label in wsi_labels_categorical_test]"
+    "wsi_file_paths_test = glob(os.path.join(rootdir_wsi, '*.svs'))\n",
+    "wsi_labels_numerical_test = [0]*len(wsi_file_paths_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************\n",
+      "Found in total:\n",
+      " 1750 tiles\n",
+      " belonging to 1 slides\n",
+      "**************************\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function DatasetManager.make_dataset.<locals>.<lambda> at 0x7f4bec7ab378> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function DatasetManager.make_dataset.<locals>.<lambda> at 0x7f4bec7ab378>: no matching AST found\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function DatasetManager.make_dataset.<locals>.<lambda> at 0x7f4bec7ab378> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function DatasetManager.make_dataset.<locals>.<lambda> at 0x7f4bec7ab378>: no matching AST found\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Training\")\n",
-    "dataset_manager_train = DatasetManager(wsi_file_paths_train,\n",
-    "                                       wsi_labels_numerical_train,\n",
-    "                                       tile_size=tile_size,\n",
-    "                                       tile_new_size=tile_new_size,\n",
-    "                                       channels=channels,\n",
-    "                                       batch_size=batch_size)\n",
-    "dataset_train = dataset_manager_train.make_dataset()\n",
-    "print(\"Test\")\n",
-    "dataset_manager_test = DatasetManager(wsi_file_paths_test,\n",
-    "                                      wsi_labels_numerical_test,\n",
+    "dataset_manager_test = DatasetManager([wsi_file_paths_test[0]],\n",
+    "                                      [wsi_labels_numerical_test[0]],\n",
     "                                      tile_size=tile_size,\n",
     "                                      tile_new_size=tile_new_size,\n",
     "                                      channels=channels,\n",
     "                                      batch_size=batch_size)\n",
     "dataset_test = dataset_manager_test.make_dataset(shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inv_class_dict = {v: k for k, v in class_dict.items()}\n",
-    "for batch_x, batch_y in dataset_train.take(1):\n",
-    "    fig, ax = plt.subplots(4, 4, figsize=(15, 15))\n",
-    "    ax = ax.ravel()\n",
-    "    j = 0\n",
-    "    for image, label in zip(batch_x[:16], batch_y[:16]):\n",
-    "        label = label.numpy()\n",
-    "        img = image.numpy()\n",
-    "        ax[j].imshow(img)\n",
-    "        ax[j].axis('off')\n",
-    "        ax[j].set_title(\"{}\\n{}\\nshape:{}\".format(inv_class_dict[int(np.argmax(label))], label, image.shape))\n",
-    "        j += 1\n",
-    "fig.tight_layout()\n",
-    "fig.savefig(\"train_images.pdf\")"
    ]
   },
   {
