Add matplotlib style

--- a/Selective_classification.ipynb
+++ b/Selective_classification.ipynb
@@ -966,6 +966,48 @@
       "Done max_softmax_response\n",
       "Done entropy\n",
       "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
+      "Done max_softmax_response\n",
+      "Done entropy\n",
+      "Done variance\n",
       "Done max_softmax_response\n"
      ]
     }
