--- a/CRC_contest.ipynb
+++ b/CRC_contest.ipynb
@@ -993,7 +993,7 @@
    ],
    "source": [
     "cm = confusion_matrix(y_true[variance>theta].argmax(axis=1), \n",
-    "                      np.array(many_preds).mean(axis=0).argmax(axis=1)[variance>=theta])\n",
+    "                      np.array(many_predspreds).mean(axis=0).argmax(axis=1)[variance>=theta])\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "seaborn_cm(cm, ax, [\"AC\", \"AD\", \"H\"])\n",
     "ax.set_title(\"Confusion matrix with the only confident images.\\nCoverage is {:.1f}\\nRisk:is {:.1f}\".format(\n",
